@@ -1,3 +1,7 @@
+2005-01-02  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* all: updated Copyright notice
+
 2004-09-24  David H. <dmalloc@users.sourceforge.net>
 	* master: Removing  distfiles.lha.uk.eu.finkmirrors.net
 	failure to comply with our mirror rules, admin has been warned often
